force-app/main/default/objects/Form_Submission__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>Birthday</label>
    <type>Phone</type>
</CustomField>