force-app/main/default/objects/Form_Submission__c/fields/Campaign_Start__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start__c</fullName>
    <formula>Campaign__r.Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Start</label>
    <type>DateTime</type>
</CustomField>