force-app/main/default/objects/Form_Submission__c/fields/Communication_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Rating__c</fullName>
    <inlineHelpText>Rate the quality of information shared throughout your process on a scale from 1 to 5.</inlineHelpText>
    <label>Communication Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_5</valueSetName>
    </valueSet>
</CustomField>