force-app/main/default/objects/Form_Submission__c/fields/Contact_At_Later_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_At_Later_Time__c</fullName>
    <label>Contact At Later Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>