force-app/main/default/objects/Form_Submission__c/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Profile</label>
    <referenceTo>Customer_Profile__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>