force-app/main/default/objects/Form_Submission__c/fields/Equity_in_Property__c.field-meta.xml
<CustomField>
    <fullName>Equity_in_Property__c</fullName>
    <label>Equity in Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>