force-app/main/default/objects/Form_Submission__c/fields/Estimated_Value_of_the_Estate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value_of_the_Estate__c</fullName>
    <label>Estimated Value of the Estate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>