force-app/main/default/objects/Form_Submission__c/fields/Has_Considered_General_Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Has_Considered_General_Power_of_Attorney__c</fullName>
    <inlineHelpText>This field is regarding a General Power of Attorney</inlineHelpText>
    <label>Has Considered General Power of Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>