force-app/main/default/objects/Form_Submission__c/fields/Has_Considered_Prenuptial_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Considered_Prenuptial_Agreement__c</fullName>
    <label>Has Considered Prenuptial Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>