force-app/main/default/objects/Form_Submission__c/fields/Has_Home_Contents_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Has_Home_Contents_Insurance__c</fullName>
    <label>Has Home Contents Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>