force-app/main/default/objects/Form_Submission__c/fields/Has_Will__c.field-meta.xml
<CustomField>
    <fullName>Has_Will__c</fullName>
    <label>Has Will</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>