force-app/main/default/objects/Form_Submission__c/fields/Has_Young_Children__c.field-meta.xml
<CustomField>
    <fullName>Has_Young_Children__c</fullName>
    <description>Young Children is early teenagers or younger</description>
    <inlineHelpText>Young Children is early teenagers or younger</inlineHelpText>
    <label>Has Young Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>