force-app/main/default/objects/Form_Submission__c/fields/Is_Registration_Form_Logged_Manually__c.field-meta.xml
<CustomField>
    <fullName>Is_Registration_Form_Logged_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Registration Form Logged Manually</label>
    <type>Checkbox</type>
</CustomField>