force-app/main/default/objects/Form_Submission__c/fields/Is_Walk_In__c.field-meta.xml
<CustomField>
    <fullName>Is_Walk_In__c</fullName>
    <formula>Lead__r.Walk_In_Attendee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Walk-In</label>
    <type>Checkbox</type>
</CustomField>