force-app/main/default/objects/Form_Submission__c/fields/Lead_Staging__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Staging</label>
    <referenceTo>Lead_Staging_Record__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>