force-app/main/default/objects/Form_Submission__c/fields/Likelihood_to_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Recommend__c</fullName>
    <inlineHelpText>How likely are you to recommend us to others, on a scale from 1 to 5?</inlineHelpText>
    <label>Likelihood to Recommend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_5</valueSetName>
    </valueSet>
</CustomField>