force-app/main/default/objects/Form_Submission__c/fields/Overall_Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience_Rating__c</fullName>
    <inlineHelpText>Rate your overall experience with us on a scale from 1 to 5.</inlineHelpText>
    <label>Overall Experience Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_1_5</valueSetName>
    </valueSet>
</CustomField>