force-app/main/default/objects/Form_Submission__c/fields/Owns_Car_s__c.field-meta.xml
<CustomField>
    <fullName>Owns_Car_s__c</fullName>
    <label>Owns Car(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, 1 car</fullName>
            </value>
            <value>
                <fullName>Yes, 2 cars</fullName>
            </value>
            <value>
                <fullName>Yes, more than 2 cars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>