force-app/main/default/objects/Form_Submission__c/fields/Owns_Real_Estate__c.field-meta.xml
<CustomField>
    <fullName>Owns_Real_Estate__c</fullName>
    <label>Owns Real Estate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>