force-app/main/default/objects/Form_Submission__c/fields/Partner_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_First_Name__c</fullName>
    <label>Partner&apos;s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>