force-app/main/default/objects/Form_Submission__c/fields/Partner_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_Phone_Number__c</fullName>
    <label>Partner&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>