force-app/main/default/objects/Form_Submission__c/fields/Person_2_Work_Situation__c.field-meta.xml
<CustomField>
    <fullName>Person_2_Work_Situation__c</fullName>
    <label>Person 2 Work Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Person_Work_Situation</valueSetName>
    </valueSet>
</CustomField>