force-app/main/default/objects/Form_Submission__c/fields/Primary_Reason_For_Not_Proceeding__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_For_Not_Proceeding__c</fullName>
    <label>Primary Reason For Not Proceeding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Not relevant</fullName>
            </value>
            <value>
                <fullName>Poor timing</fullName>
            </value>
            <value>
                <fullName>Confusing</fullName>
            </value>
            <value>
                <fullName>Got help elsewhere</fullName>
            </value>
            <value>
                <fullName>Poor chemistry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>