force-app/main/default/objects/Form_Submission__c/fields/Reconsideration_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration_Incentive__c</fullName>
    <label>Reconsideration Incentive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Payment plan</fullName>
            </value>
            <value>
                <fullName>Better explanation</fullName>
            </value>
            <value>
                <fullName>In-person meeting</fullName>
            </value>
            <value>
                <fullName>Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>