force-app/main/default/objects/Form_Submission__c/fields/Request_for_new_advisor__c.field-meta.xml
<CustomField>
    <fullName>Request_for_new_advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for new advisor</label>
    <type>Checkbox</type>
</CustomField>