force-app/main/default/objects/Form_Submission__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Profiler</fullName>
            </value>
            <value>
                <fullName>dinfamiliejurist.dk</fullName>
            </value>
            <value>
                <fullName>totalliv.dk</fullName>
            </value>
            <value>
                <fullName>totalliv.se</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Totalliv</fullName>
            </value>
            <value>
                <fullName>Referral Form</fullName>
            </value>
            <value>
                <fullName>Meeting Booker</fullName>
            </value>
            <value>
                <fullName>Lecture</fullName>
            </value>
            <value>
                <fullName>Agentforce Conversation</fullName>
            </value>
            <value>
                <fullName>Journal Completed Survey</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>