force-app/main/default/objects/Form_Submission__c/fields/Suggestions_for_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_Improvement__c</fullName>
    <inlineHelpText>Share anything you think we could improve on in the future.</inlineHelpText>
    <label>Suggestions for Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>