force-app/main/default/objects/Form_Submission__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Lecture Registration Form is also known as &quot;Tilmeldingsblanket&quot;</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Questionnaire</fullName>
            </value>
            <value>
                <fullName>Lecture Registration Form</fullName>
            </value>
            <value>
                <fullName>Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Future Assurance Form</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction Survey</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Document Review Request</fullName>
            </value>
            <value>
                <fullName>Lead Screening</fullName>
            </value>
            <value>
                <fullName>Advisor Discovery</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Form Submission</fullName>
            </value>
            <value>
                <fullName>Rebooking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>