force-app/main/default/objects/Form_Submission__c/fields/Vil_du_uddybe__c.field-meta.xml
<CustomField>
    <fullName>Vil_du_uddybe__c</fullName>
    <label>Vil du uddybe?</label>
    <type>TextArea</type>
</CustomField>