force-app/main/default/objects/Form_Submission__c/fields/Wants_Existing_Documents_Checked__c.field-meta.xml
<CustomField>
    <fullName>Wants_Existing_Documents_Checked__c</fullName>
    <label>Wants Existing Documents Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>