force-app/main/default/objects/Form_Submission__c/fields/Wants_Future_PoA_Customer_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Wants_Future_PoA_Customer_Benefit__c</fullName>
    <inlineHelpText>This is a General Power of Attorney from the Customer Benefit Program (kundefordel)</inlineHelpText>
    <label>Wants Future PoA (Customer Benefit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>